changes to barchart styling

--- a/components/iframe-graph/iframe-graph.html
+++ b/components/iframe-graph/iframe-graph.html
@@ -4,24 +4,26 @@
 <head>
 </head>
 <style>
-    #cy {
+    /* #cy {
         width: 100vw;
         height: 100vh;
         display: block;
-    }
+    } */
 
     div.container {
-        width: 100vw;
+        width: 100%;
+        height: 100%;
         display: flex;
+        padding-left: 150px;
     }
 
     div.top-keywords {
-        width: 50vw;
+        max-width: 20%;
     }
 
-    canvas {
-        width: 50vw;
-        height: 40vh;
+    canvas#barChart {
+        max-width: 60% !important;
+        max-height: 50% !important;
     }
 </style>
 
@@ -29,14 +31,17 @@
     <div class="container">
         <div class="top-keywords">
             <h4>Top 5 Occurring Keywords</h4>
-            <span>1. Whatever</span>
-            <span>2. Whatever</span>
-            <span>3. Whatever</span>
-            <span>4. Whatever</span>
-            <span>5. Whatever</span>
+            <h5>1. Whatever</h5>
+            <h5>1. Whatever</h5>
+            <h5>1. Whatever</h5>
+            <h5>1. Whatever</h5>
+            <h5>1. Whatever</h5>
         </div>
-        <canvas id="barChart" width="400" height="200"></canvas>
+        <canvas id="barChart"></canvas>
     </div>
+    <!-- <div id="cy">
+
+    </div> -->
     <script src="../../cytoscape.js"></script>
     <!-- <script src="iframe-graph.js"></script> -->
     <script src="../../Chart.js"></script>
