working bar charts

--- a/components/iframe-graph/iframe-graph.html
+++ b/components/iframe-graph/iframe-graph.html
@@ -43,10 +43,32 @@
 
     </div> -->
     <script src="../../cytoscape.js"></script>
-    <!-- <script src="iframe-graph.js"></script> -->
+    <!-- <script src="/components/iframe-graph/iframe-graph.js"></script> -->
     <script src="../../Chart.js"></script>
     <script src="bar-chart.js"></script>
 
 </body>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+    <thead>
+        <tr>
+            <th class="mdl-data-table__cell--non-numeric">Material</th>
+            <th>Unit price</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric">Acrylic (Transparent)</td>
+            <td>$2.90</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric">Plywood (Birch)</td>
+            <td>$1.25</td>
+        </tr>
+        <tr>
+            <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
+            <td>$2.35</td>
+        </tr>
+    </tbody>
+</table>
 
 </html>
