--- a/components/iframe-graph/iframe-graph.html
+++ b/components/iframe-graph/iframe-graph.html
@@ -72,18 +72,4 @@
 </table>
 
 </html>
-<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1480_RC02/embed_loader.js"></script>
-<script type="text/javascript">
-    trends.embed.renderExploreWidget("TIMESERIES", {
-        "comparisonItem": [{
-            "keyword": "whatever",
-            "geo": "",
-            "time": "today 12-m"
-        }],
-        "category": 0,
-        "property": ""
-    }, {
-        "exploreQuery": "q=whatever&date=today 12-m",
-        "guestPath": "https://trends.google.com:443/trends/embed/"
-    });
-</script>
+<span class="mdl-badge" data-badge="4">Inbox</span>
