--- a/components/iframe-graph/iframe-graph.html
+++ b/components/iframe-graph/iframe-graph.html
@@ -73,3 +73,8 @@
 
 </html>
 <span class="mdl-badge" data-badge="4">Inbox</span>
+
+<div id="tt1" class="icon material-icons">add</div>
+<div class="mdl-tooltip" data-mdl-for="tt1">
+Follow
+</div>
