--- a/components/iframe-graph/iframe-graph.html
+++ b/components/iframe-graph/iframe-graph.html
@@ -78,18 +78,6 @@
 <div class="mdl-tooltip" data-mdl-for="tt1">
     Follow
 </div>
-<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1480_RC02/embed_loader.js"></script>
-<script type="text/javascript">
-    trends.embed.renderExploreWidget("RELATED_TOPICS", {
-        "comparisonItem": [{
-            "keyword": "neural network",
-            "geo": "",
-            "time": "today 12-m"
-        }],
-        "category": 0,
-        "property": ""
-    }, {
-        "exploreQuery": "q=neural%20network&date=today 12-m",
-        "guestPath": "https://trends.google.com:443/trends/embed/"
-    });
-</script>
+<button class="mdl-button mdl-js-button mdl-button--icon">
+    <i class="material-icons">mood</i>
+</button>
